--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -7,15 +7,69 @@
 }
 
 .background-image {
-    width: 40%;
-    height: 60%;
+    margin-top: 0px;
+    width: 600px;
+    height: 400px;
 }
 
 .game-info {
-    padding-left: 30px;
-    max-width: 40%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-left: 8%;
+    margin-top: 0px;
+    margin-bottom: 3%;
+    width: 500px;
+    height: 90%;
+    border: 3px solid;
+    border-color: hsl(0deg 0% 0% / 0.0);
+    border-radius: 20px;
+    text-align: center;
 }
 
 .game-title {
-    padding-bottom: 15px;
+    margin: auto;
+    padding: 20px 20px;
+}
+
+.genre-container {
+    display: flex;
+    flex-wrap: inherit;
+    padding-right: 5px;
+    padding-left: 8px;
+    max-width: 50%;
+    height: 0%;
+    text-align: left;
+}
+
+.genre {
+    display: flex;
+    background-color: hsl(0deg 0% 0% / 0.2);
+    border-radius: 5px;
+    padding: 5px 5px 10px 5px;
+    margin: 0px 10px 15px 0px;
+}
+
+.developer-container {
+    display: flex;
+    justify-content: right;
+    flex-wrap: wrap;
+    max-width: 50%;
+    height: 0%;
+    text-align: right;
+}
+
+.developer {
+    display: flex;
+    background-color: hsl(0deg 0% 0% / 0.2);
+    border-radius: 5px;
+    padding: 5px 5px 10px 5px;
+    margin: 0px 10px 15px 0px;
+}
+
+
+.break {
+    flex-basis: 100%;
+    height: 0px;
+    width: 0px;
 }
