--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -8,18 +8,18 @@
 
 .background-image {
     margin-top: 0px;
-    width: 600px;
-    height: 400px;
+    width: 1000px;
+    height: 600px;
 }
 
 .game-info {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-left: 8%;
+    margin-left: 5%;
     margin-top: 0px;
     margin-bottom: 3%;
-    width: 500px;
+    width: 600px;
     height: 90%;
     border: 3px solid;
     border-color: hsl(0deg 0% 0% / 0.0);
@@ -29,14 +29,16 @@
 
 .game-title {
     margin: auto;
-    padding: 20px 20px;
+    padding: 20px 20px 10px 20px;
 }
 
 .genre-container {
     display: flex;
     flex-wrap: inherit;
-    padding-right: 5px;
-    padding-left: 8px;
+    justify-content: left;
+    padding-right: 10px;
+    padding-left: 10px;
+    min-width: 50%;
     max-width: 50%;
     height: 0%;
     text-align: left;
@@ -46,14 +48,15 @@
     display: flex;
     background-color: hsl(0deg 0% 0% / 0.2);
     border-radius: 5px;
-    padding: 5px 5px 10px 5px;
-    margin: 0px 10px 15px 0px;
+    padding: 4px 5px 8px 5px;
+    margin: 5px 10px 15px 0px;
 }
 
 .developer-container {
     display: flex;
     justify-content: right;
     flex-wrap: wrap;
+    min-width: 50%;
     max-width: 50%;
     height: 0%;
     text-align: right;
@@ -63,13 +66,62 @@
     display: flex;
     background-color: hsl(0deg 0% 0% / 0.2);
     border-radius: 5px;
-    padding: 5px 5px 10px 5px;
-    margin: 0px 10px 15px 0px;
+    padding: 4px 5px 8px 5px;
+    margin: 5px 10px 15px 0px;
 }
 
-
 .break {
+    display: flex;
+    justify-content: center;
     flex-basis: 100%;
-    height: 0px;
-    width: 0px;
+    border-bottom: 1px solid #CCC;
+    border-radius: 5px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 10px;
+}
+
+.genre-developer-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-top: -5px;
+}
+
+.description-container {
+    display: block;
+    padding-bottom: 10px;
+}
+
+.description {
+    text-align: left;
+    font-size: 1.1em;
+    padding-left: 10px;
+    padding-right: 7px;
+}
+
+.tag-container {
+    display: flex;
+    flex-wrap: inherit;
+    justify-content: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    max-width: 100%;
+    text-align: left;
+}
+
+.tag-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 7px;
+}
+
+.tag {
+    display: flex;
+    background-color: hsl(0deg 0% 0% / 0.2);
+    border-radius: 5px;
+    padding: 4px 5px 8px 5px;
+    margin: 5px 10px 15px 0px;
 }
