--- a/src/Components/GameList/GameList.css
+++ b/src/Components/GameList/GameList.css
@@ -54,6 +54,7 @@
     display: flex;
     justify-content: center;
     padding: 20px;
+    width: 100%;
 }
 
 .filter {
@@ -64,7 +65,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 100;
+    min-width: 100%;
     min-height: 100vh;
 }
 
