Added search bar above list of game, refactored GameList component to allow for searching based off name, slight style changes

--- a/src/Components/GameList/GameList.css
+++ b/src/Components/GameList/GameList.css
@@ -74,3 +74,13 @@
     width: 5%;
     animation: fa-spin 1.3s infinite linear;
 }
+
+.search-container {
+    display: flex;
+    justify-content: center;
+}
+
+.search {
+    padding: 30px 15px 15px 15px;
+    width: 50%;
+}
