--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -39,6 +39,7 @@
     justify-content: left;
     padding-right: 10px;
     padding-left: 10px;
+    width: 50%;
     min-width: 50%;
     max-width: 100%;
     height: 0%;
@@ -138,6 +139,7 @@
     justify-content: left;
     padding-right: 10px;
     padding-left: 10px;
+    width: 50%;
     min-width: 50%;
     max-width: 100%;
     height: 0%;
@@ -164,7 +166,7 @@
     max-width: 100%;
     height: 0%;
     text-align: center;
-    flex-grow: 100;
+    flex-grow: 1;
 }
 
 .game-rating {
