--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -6,20 +6,39 @@
     padding-top: 100px;
 }
 
-.background-image {
+.media-container {
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 50%;
+    padding-right: 30px;
+    padding-left: 20px;
+}
+
+.main-image {
     object-fit: cover;
-    margin-top: 0px;
-    width: 80%;
-    height: 30%;
+    margin-top: 20px;
+    margin-bottom: 50px;
+    width: 1200px;
+    height: 650px;
+}
+
+.small-image {
+    object-fit: cover;
+    width: 150px;
+    height: 150px;
+    margin: 10px;
 }
 
 .game-info {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-left: 5%;
+    margin-left: 0%;
     margin-top: 0px;
     margin-bottom: 3%;
+    margin-right: 50px;
     max-width: 35vw;
     max-height: 90%;
     border: 3px solid;
@@ -175,7 +194,10 @@
     text-align: left;
     flex-wrap: wrap;
     font-size: large;
-    width: 100%;
+    width: auto;
+    background-color: hsl(0deg 0% 0% / 0.2);
+    border-radius: 5px;
+    padding: 4px 5px 8px 5px;
 }
 
 .publisher-rating-title {
