--- a/src/Global Styles/GlobalStyle.css
+++ b/src/Global Styles/GlobalStyle.css
@@ -15,3 +15,31 @@ img, .drop-shadow {
 img {
     position: relative;
 }
+
+.loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100%;
+    min-height: 100vh;
+}
+
+.loading-icon {
+    height: 5%;
+    width: 5%;
+    animation: fa-spin 1.3s infinite linear;
+}
+
+.zoom {
+    transition: .2s;
+}
+
+.zoom:hover {
+    transform: scale(1.3);
+    z-index: 1;
+    cursor: pointer;
+    background-position-x: 500px;
+    background: black;
+}
+
+
