--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     justify-content: center;
-    min-width: 100%;
+    min-width: 100vw;
     min-height: 100vh;
     padding-top: 100px;
 }
@@ -12,7 +12,7 @@
     flex-wrap: wrap;
     width: 100%;
     height: 50%;
-    padding-right: 30px;
+    padding-right: 35px;
     padding-left: 20px;
 }
 
@@ -38,7 +38,7 @@
     margin-left: 0%;
     margin-top: 0px;
     margin-bottom: 3%;
-    margin-right: 50px;
+    margin-right: 30px;
     max-width: 35vw;
     max-height: 90%;
     border: 3px solid;
