--- a/src/Components/GameList/GameList.css
+++ b/src/Components/GameList/GameList.css
@@ -41,7 +41,6 @@
     display: flex;
     justify-content: center;
     padding: 20px;
-    width: 100%;
 }
 
 .filter {
@@ -56,4 +55,9 @@
 .search {
     padding: 30px 15px 15px 15px;
     width: 50%;
+}
+
+.bottom {
+    width: 100%;
+    height: 100vh;
 }
