--- a/src/Components/GameList/GameList.css
+++ b/src/Components/GameList/GameList.css
@@ -38,8 +38,12 @@
 }
 
 .pages {
+    width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
     padding: 20px;
 }
 
