Added show more/show less feature for game description on Game component, added fallback image on GameList component in case game cover image is not available, added game platforms to Game component, changed search to be exact, style changes and fixes.

--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -202,6 +202,8 @@
     background-color: hsl(0deg 0% 0% / 0.2);
     border-radius: 5px;
     padding: 4px 5px 8px 5px;
+    margin-top: 8px;
+    margin-bottom: 8px;
 }
 
 .publisher-rating-title {
@@ -237,4 +239,55 @@
     font-size: x-large;
     padding-top: 40px;
     padding-bottom: 60px;
+}
+
+.show-more-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items:flex-end;
+    padding-bottom: 10px;
+    height: 60px;
+    margin-top: -40px;
+    background-image: linear-gradient(to top, rgb(245, 237, 237, 1), rgb(245, 237, 237, 0.5));
+}
+
+.show-more-less {
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+}
+
+.show-less-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items:flex-end;
+    padding-bottom: 10px;
+    height: 60px;
+    margin-top: -35px;
+}
+
+.platform-container {
+    display: flex;
+    flex-wrap: inherit;
+    justify-content: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    max-width: 100%;
+}
+
+.platform {
+    display: flex;
+    background-color: hsl(0deg 0% 0% / 0.2);
+    border-radius: 5px;
+    padding: 4px 5px 8px 5px;
+    margin: 5px 10px 15px 0px;
+}
+
+.platform-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-top: -5px;
 }
