--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -49,6 +49,7 @@
     border-color: hsl(0deg 0% 0% / 0.0);
     border-radius: 20px;
     text-align: center;
+    overflow: auto;
 }
 
 .game-title {
@@ -65,7 +66,7 @@
     width: 50%;
     min-width: 50%;
     max-width: 100%;
-    height: 0%;
+    height: 100%;
     text-align: center;
     flex-grow: 1;
 }
@@ -87,7 +88,7 @@
     width: 50%;
     min-width: 0%;
     max-width: 100%;
-    height: 0%;
+    height: 100%;
     text-align: center;
     flex-grow: 1;
 }
@@ -162,10 +163,10 @@
     justify-content: left;
     padding-right: 10px;
     padding-left: 10px;
-    width: 50%;
+    width: auto;
     min-width: 50%;
     max-width: 100%;
-    height: 0%;
+    height: 100%;
     text-align: center;
     flex-grow: 1;
 }
@@ -187,7 +188,7 @@
     width: 50%;
     min-width: 0%;
     max-width: 100%;
-    height: 0%;
+    height: 100%;
     text-align: center;
     flex-grow: 1;
 }
@@ -202,8 +203,7 @@
     background-color: hsl(0deg 0% 0% / 0.2);
     border-radius: 5px;
     padding: 4px 5px 8px 5px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin: 8px 8px 8px 0px;
 }
 
 .publisher-rating-title {
@@ -248,7 +248,7 @@
     align-items:flex-end;
     padding-bottom: 10px;
     height: 60px;
-    margin-top: -40px;
+    margin-top: -30px;
     background-image: linear-gradient(to top, rgb(245, 237, 237, 1), rgb(245, 237, 237, 0.5));
 }
 
@@ -258,6 +258,10 @@
     cursor: pointer;
 }
 
+.show-more-less:hover {
+    font-weight: normal;
+}
+
 .show-less-container {
     position: relative;
     display: flex;
@@ -265,7 +269,7 @@
     align-items:flex-end;
     padding-bottom: 10px;
     height: 60px;
-    margin-top: -35px;
+    margin-top: -30px;
 }
 
 .platform-container {
@@ -275,6 +279,7 @@
     padding-left: 10px;
     padding-right: 10px;
     max-width: 100%;
+    flex-grow: 1;
 }
 
 .platform {
@@ -290,4 +295,46 @@
     width: 100%;
     text-align: center;
     margin-top: -5px;
+}
+
+.stores-container {
+    display: flex;
+    justify-content: left;
+    flex-wrap: wrap;
+    align-self: flex-start;
+    flex-basis: 100%;
+    max-width: 60%;
+    max-height: 00%;
+    border: 3px solid;
+    border-color: hsl(0deg 0% 0% / 0.0);
+    border-radius: 20px;
+    margin-top: 50px;
+    margin-bottom: 3%;
+    padding: 5px 8px 5px 8px;
+    flex-grow: 1;
+}
+
+.store-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    color: black;
+}
+
+.store {
+    display: flex;
+    background-color: hsl(0deg 0% 0% / 0.2);
+    border-radius: 5px;
+    padding: 4px 5px 8px 5px;
+    margin: 5px 10px 15px 0px;
+}
+
+.store:hover {
+    background-color: hsl(0deg 0% 0% / 0.5);
+    cursor: pointer;
+}
+
+.store-anchor, .store-anchor:hover {
+    color: inherit;
+    text-decoration: none;
 }
