--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -20,12 +20,13 @@
 }
 
 .main-image {
-    object-fit: cover;
+    object-fit: fill;
     margin-top: 0%;
     margin-bottom: 50px;
-    max-width: 100%;
     height: auto;
-    width: auto;
+    width: 100%;
+    max-height: 80vh;
+    max-width: 100%;
 }
 
 .small-image {
@@ -299,7 +300,7 @@
 
 .stores-container {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     flex-wrap: wrap;
     align-self: flex-start;
     flex-basis: 100%;
@@ -311,7 +312,6 @@
     margin-top: 50px;
     margin-bottom: 3%;
     padding: 5px 8px 5px 8px;
-    flex-grow: 1;
 }
 
 .store-title {
@@ -337,4 +337,8 @@
 .store-anchor, .store-anchor:hover {
     color: inherit;
     text-decoration: none;
+}
+
+.line-break {
+    width: 100%;
 }
