Added ability to sort, added button for pages to go back to first page, slight style changes.

--- a/src/Components/GameList/GameList.css
+++ b/src/Components/GameList/GameList.css
@@ -126,3 +126,16 @@
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
 }
+
+.sort-container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    padding-right: 66px;
+}
+
+.first-page-button {
+    font-size: 28px !important;
+    pointer-events: none !important;
+}
