--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -24,9 +24,8 @@
     margin-top: 0%;
     margin-bottom: 50px;
     height: auto;
-    width: 100%;
     max-height: 80vh;
-    max-width: 100%;
+    min-width: 100%;
 }
 
 .small-image {
