--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
     position: relative;
+    display: flex;
     background-color: #921954;
     width: 100%;
     height: 80px;
@@ -15,6 +16,7 @@
 }
 
 .title {
+    display: inline-block;
     text-align: left;
     padding-top: 10px;
     padding-left: 100px;
@@ -25,11 +27,12 @@
 .anchor {
     position: relative;
     float: left;
-    height: 100%;
+    height: auto;
     text-decoration: none;
 }
 
 .home {
+    display: inline-block;
     text-align: left;
     padding-top: 16px;
     padding-left: 40px;
