--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -12,8 +12,8 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 60%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     padding-right: 35px;
     padding-left: 20px;
     flex: 1;
@@ -30,8 +30,8 @@
 
 .small-image {
     object-fit: cover;
-    width: 150px;
-    height: 150px;
+    width: 140px;
+    height: 140px;
     margin: 10px;
 }
 
@@ -45,9 +45,6 @@
     margin-right: 30px;
     max-width: 35vw;
     max-height: 90%;
-    border: 3px solid;
-    border-color: hsl(0deg 0% 0% / 0.0);
-    border-radius: 20px;
     text-align: center;
     overflow: auto;
 }
@@ -290,14 +287,10 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    align-self: flex-start;
     flex-basis: 100%;
     max-width: 60%;
     max-height: 100%;
-    border: 3px solid;
-    border-color: hsl(0deg 0% 0% / 0.0);
-    border-radius: 20px;
-    margin-top: 50px;
+    margin-top: 10%;
     margin-bottom: 3%;
     padding: 5px 8px 5px 8px;
 }
@@ -338,4 +331,42 @@
 .text-background {
     background-color: hsl(0deg 0% 0% / 0.2);
     border-radius: 5px;
+}
+
+@media only screen and (max-width: 580px) {
+    .no-video {
+        padding-top: 5px;
+        padding-bottom: 20px;
+    }
+    .video-container {
+        height: 200px;
+        margin-bottom: 0px;
+    }
+    .video {
+        width: 100%;
+    }
+    .screenshot-container {
+        padding: 0;
+        min-width: 100%;
+
+    }
+    .main-image {
+        margin-bottom: 30px;
+        border-radius: 0px;
+    }
+    .small-image {
+        width: 30%;
+        height: auto;
+        margin: 5px;
+    }
+    .game-info {
+        margin: 30px auto auto auto;
+        min-width: 100vw;
+        border-radius: 0;
+    }
+    .stores-container {
+        min-width: 100vw;
+        border-radius: 0px;
+        margin-bottom: 0;
+    }
 }
