--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,7 +3,7 @@
     display: flex;
     background-color: #921954;
     width: 100%;
-    height: 80px;
+    height: 5%;
     text-align: center;
 }
 
@@ -19,8 +19,11 @@
     display: inline-block;
     text-align: left;
     padding-top: 10px;
-    padding-left: 100px;
-    width: fit-content;
+    padding-left: 60px;
+    width: 100%;
+    height: auto;
+    word-wrap: break-word;
+    white-space: nowrap;
     color: white;
 }
 
@@ -35,7 +38,16 @@
     display: inline-block;
     text-align: left;
     padding-top: 16px;
-    padding-left: 40px;
+    padding-left: 15px;
     color: white;
     text-decoration: none;
+}
+
+@media only screen and (max-width: 580px) {
+    .title {
+        padding-left: 85px;
+    }
+    .header {
+        flex-wrap: wrap;
+    }
 }
