--- a/src/Components/Game/Game.css
+++ b/src/Components/Game/Game.css
@@ -340,7 +340,7 @@
     }
     .video-container {
         height: 200px;
-        margin-bottom: 0px;
+        margin-bottom: 40px;
     }
     .video {
         width: 100%;
@@ -362,7 +362,7 @@
     .game-info {
         margin: 30px auto auto auto;
         min-width: 100vw;
-        border-radius: 0;
+        border-radius: 0px;
     }
     .stores-container {
         min-width: 100vw;
