--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,7 @@
 .header {
     position: relative;
     display: flex;
+    align-items: center;
     background-color: #921954;
     width: 100%;
     height: 5%;
@@ -8,23 +9,21 @@
 }
 
 .game-icon {
-    position: absolute;
-    display: inline-block;
-    align-items: left;
-    left: 10px;
-    top: 3px;
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
 }
 
 .title {
     display: inline-block;
     text-align: left;
-    padding-top: 10px;
-    padding-left: 60px;
+    padding-left: 10px;
     width: 100%;
     height: auto;
     word-wrap: break-word;
     white-space: nowrap;
     color: white;
+    flex: 1;
 }
 
 .anchor {
@@ -37,17 +36,19 @@
 .home {
     display: inline-block;
     text-align: left;
-    padding-top: 16px;
     padding-left: 15px;
     color: white;
     text-decoration: none;
 }
 
+.links {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+}
+
 @media only screen and (max-width: 580px) {
-    .title {
-        padding-left: 85px;
-    }
-    .header {
-        flex-wrap: wrap;
+    .home {
+        padding-left: 11px;
     }
 }
